[gd_scene load_steps=7 format=3 uid="uid://ds7em1as8udg6"]

[ext_resource type="Script" uid="uid://dr4rm0eckpfee" path="res://hud/language_selector.gd" id="1_jy6p1"]
[ext_resource type="FontFile" uid="uid://dl3r6e3kek5om" path="res://fonts/EagleLake-Regular.ttf" id="2_48xoo"]

[sub_resource type="Animation" id="Animation_8vdw1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dgj7p"]
resource_name = "hud_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uq60y"]
resource_name = "hud_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4pcxy"]
_data = {
&"RESET": SubResource("Animation_8vdw1"),
&"hud_in": SubResource("Animation_dgj7p"),
&"hud_out": SubResource("Animation_uq60y")
}

[node name="LanguageSelector" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jy6p1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -52.5
offset_right = 82.0
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="btn_spanish" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xoo")
theme_override_font_sizes/font_size = 21
text = "Spanish/Espa√±ol"

[node name="btn_english" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_48xoo")
theme_override_font_sizes/font_size = 21
text = "English/Ingles"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4pcxy")
}

[connection signal="button_up" from="ColorRect/VBoxContainer/btn_spanish" to="." method="_on_btn_spanish_button_up"]
[connection signal="button_up" from="ColorRect/VBoxContainer/btn_english" to="." method="_on_btn_english_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
